--- a/publications.html
+++ b/publications.html
@@ -59,53 +59,63 @@
 	<br>
 	<ol>
 	  <li>
-	    Toshimitsu R. and <b>Isakari H.</b><br>
-	    A Burton-Miller-type boundary element method based on a hybrid integral representation and its application to cavity scattering,<br>
-	    2023, <a href="https://arxiv.org/abs/2305.15815">arXiv:2305.15815</a>.
-	  </li>
-	  <br>
-	  <li>
 	    Honshuku Y. and <b>Isakari H.</b><br>
 	    BEM-based fast frequency sweep for acoustic scattering by periodic slab,<br>
 	    2023, <a href="https://arxiv.org/abs/2305.08474">arXiv:2305.08474</a>.
 	  </li>
 	</ol>
+	<br>
+	<hr>	
         <br>
 	<h2 class="heading"> <b>原著論文</b> <br> <b>Jouranl papers</b> </h2>
 	<br>	
 	<ol>
 	  <li>
-	    Honshuku Y. and <b>Isakari H.</b><br>
-	    A topology optimisation of acoustic devices based on the frequency response estimation with the Padé approximation,<br>
-	    Applied Mathematical Modelling, Vol. 110, pp. 819-840, 2022, <a href="https://doi.org/10.1016/j.apm.2022.06.020">doi:10.1016/j.apm.2022.06.020</a>, <a href="https://arxiv.org/abs/2111.12443">arXiv:2111.12443.</a>
+	    Toshimitsu R. and <b>Isakari H.</b><br>
+	    A Burton-Miller-type boundary element method based on a hybrid integral representation and its application to cavity scattering,<br>
+	    Engineering Analysis with Boundary Elements, Vol. 158, pp. 303-312, 2024, <a href="https://doi.org/10.1016/j.enganabound.2023.11.003">doi:10.1016/j.enganabound.2023.11.003</a>, <a href="https://arxiv.org/abs/2305.15815">arXiv:2305.15815</a>.
 	  </li>
 	  <br>
 	  <li>
-	    Matsushima K., <b>Isakari H.</b>, Takahashi T., and Matsumoto T.<br>
-	    A topology optimization of open acoustic waveguides based on a scattering matrix method,<br>
-	    Wave Motion, Vol. 113, p. 102987 (18pages), 2022, <a href="https://doi.org/10.1016/j.wavemoti.2022.102987">doi:10.1016/j.wavemoti.2022.102987</a>, <a href="https://arxiv.org/abs/2201.09533">arXiv:2201.09533.</a>
+	    <b>Isakari H.</b><br>
+	    A fast skeletonisation of 2D objects using a generalised double-layer potential and the H-matrix method,<br>
+	    計算数理工学論文集, Vol. 23, pp. ??-??, 2023.
 	  </li>
-	  <br>
-	  <li>
-	    Qin J., <b> Isakari H.</b>, Takahashi T., and Matsumoto T.<br>
-	    "A robust topology optimisation for wideband structures in acoustic-elastodynamic coupled fields"<br>
-	    Engineering Analysis with Boundary Elements, Vol. 140, pp. 544-561, 2022, <a href="https://doi.org/10.1016/j.enganabound.2022.04.012">doi:10.1016/j.enganabound.2022.04.012</a><br>
-	  </li>
-	  <br>
-	  <li>
-	    Takahashi T., Hirai T., <b> Isakari H.</b>, and Matsumoto T.
-	    <br>
-	    "An isogeometric boundary element method for three-dimensional doubly-periodic layered structures in electromagnetics"<br>
-	    Engineering Analysis with Boundary Elements, Vol. 136, pp. 37-54, 2022, <a href="https://doi.org/10.1016/j.enganabound.2021.11.020">doi:10.1016/j.enganabound.2021.11.020</a><br>
-	  </li>
-	  <br>
-	  <li>
-	    Takahashi T., Sato D., <b> Isakari H.</b>, and Matsumoto T.
-	    <br>
-	    "A shape optimisation with the isogeometric boundary element method and adjoint variable method for the three-dimensional Helmholtz equation"<br>
-	    Computer-Aided Design, Vol. 142, 103126 (17pages), 2022, <a href="https://doi.org/10.1016/j.cad.2021.103126">doi:10.1016/j.cad.2021.103126</a><br>
-	  </li>
+	  <!-- <br> -->
+	  <!-- <li> -->
+	  <!--   Honshuku Y. and <b>Isakari H.</b><br> -->
+	  <!--   A topology optimisation of acoustic devices based on the frequency response estimation with the Padé approximation,<br> -->
+	  <!--   Applied Mathematical Modelling, Vol. 110, pp. 819-840, 2022, <a href="https://doi.org/10.1016/j.apm.2022.06.020">doi:10.1016/j.apm.2022.06.020</a>, <a href="https://arxiv.org/abs/2111.12443">arXiv:2111.12443.</a> -->
+	  <!-- </li> -->
+	  <!-- <br> -->
+	  <!-- <li> -->
+	  <!--   Matsushima K., <b>Isakari H.</b>, Takahashi T., and Matsumoto T.<br> -->
+	  <!--   A topology optimization of open acoustic waveguides based on a scattering matrix method,<br> -->
+	  <!--   Wave Motion, Vol. 113, p. 102987 (18pages), 2022, <a href="https://doi.org/10.1016/j.wavemoti.2022.102987">doi:10.1016/j.wavemoti.2022.102987</a>, <a href="https://arxiv.org/abs/2201.09533">arXiv:2201.09533.</a> -->
+	  <!-- </li> -->
+	  <!-- <br> -->
+	  <!-- <li> -->
+	  <!--   Qin J., <b> Isakari H.</b>, Takahashi T., and Matsumoto T.<br> -->
+	  <!--   "A robust topology optimisation for wideband structures in acoustic-elastodynamic coupled fields"<br> -->
+	  <!--   Engineering Analysis with Boundary Elements, Vol. 140, pp. 544-561, 2022, <a href="https://doi.org/10.1016/j.enganabound.2022.04.012">doi:10.1016/j.enganabound.2022.04.012</a><br> -->
+	  <!-- </li> -->
+	  <!-- <br> -->
+	  <!-- <li> -->
+	  <!--   Takahashi T., Hirai T., <b> Isakari H.</b>, and Matsumoto T. -->
+	  <!--   <br> -->
+	  <!--   "An isogeometric boundary element method for three-dimensional doubly-periodic layered structures in electromagnetics"<br> -->
+	  <!--   Engineering Analysis with Boundary Elements, Vol. 136, pp. 37-54, 2022, <a href="https://doi.org/10.1016/j.enganabound.2021.11.020">doi:10.1016/j.enganabound.2021.11.020</a><br> -->
+	  <!-- </li> -->
+	  <!-- <br> -->
+	  <!-- <li> -->
+	  <!--   Takahashi T., Sato D., <b> Isakari H.</b>, and Matsumoto T. -->
+	  <!--   <br> -->
+	  <!--   "A shape optimisation with the isogeometric boundary element method and adjoint variable method for the three-dimensional Helmholtz equation"<br> -->
+	  <!--   Computer-Aided Design, Vol. 142, 103126 (17pages), 2022, <a href="https://doi.org/10.1016/j.cad.2021.103126">doi:10.1016/j.cad.2021.103126</a><br> -->
+	  <!-- </li> -->
 	</ol>
+	<br>
+	<hr>
 	<br>
 	<h2 class="heading"> <b>学会発表</b> <br> <b>Conference contributions</b> </h2>
 	<br>第28回計算工学講演会, つくば国際会議場(つくば市), 2023年5月31日-6月2日.
@@ -116,43 +126,43 @@
 	<br>本宿裕太, 飯盛浩司
 	<br>2次元1周期構造によるスカラー波動散乱場のfast frequency sweepについて
 	<br>
-	<br>第14回最適化シンポジウム, 名古屋大学(名古屋市), 2022年11月12日-13日.
-	<br>本宿裕太, 飯盛浩司
-	<br>遠方場係数の有理多項式近似に基づく周期散乱構造のトポロジー最適化について
+	<!-- <br>第14回最適化シンポジウム, 名古屋大学(名古屋市), 2022年11月12日-13日. -->
+	<!-- <br>本宿裕太, 飯盛浩司 -->
+	<!-- <br>遠方場係数の有理多項式近似に基づく周期散乱構造のトポロジー最適化について -->
+	<!-- <br> -->
+	<!-- <br>第14回最適化シンポジウム, 名古屋大学(名古屋市), 2022年11月12日-13日. -->
+	<!-- <br>丸山意生, 飯盛浩司 -->
+	<!-- <br>ガウス関数によって重み付けされた周波数応答予測に基づく広帯域デバイスのトポロジー最適化 -->
+	<!-- <br> -->
+	<!-- <br>第35回計算力学講演会, オンライン, 2022年11月16日-18日. -->
+	<!-- <br>飯盛浩司 -->
+	<!-- <br>scattering frequencyのトポロジー感度の境界積分表現 -->
+	<!-- <br> -->
+	<!-- <br>第35回計算力学講演会, オンライン, 2022年11月16日-18日. -->
+	<!-- <br>中嶋利名, 本宿裕太, 飯盛浩司 -->
+	<!-- <br>広帯域音響デバイスのための複数のPade近似を用いたロバ ストトポロジー最適化 -->
+	<!-- <br> -->
+	<!-- <br>第35回計算力学講演会, オンライン, 2022年11月16日-18日. -->
+	<!-- <br>本宿裕太, 飯盛浩司 -->
+	<!-- <br>Pade近似を用いた音響透過率の角周波数平均の予測とそのトポロジー導関数 -->
+	<!-- <br> -->
+	<!-- <br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日. -->
+	<!-- <br>Honshuku Y. and Isakari H. -->
+	<!-- <br>A boundary element method for evaluating high-order frequency derivatives of acoustic wave scattering by periodic structures -->
+	<!-- <br> -->
+	<!-- <br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日. -->
+	<!-- <br>Sato S., Takahashi T. Isakari H., and Matsumoto T.						     -->
+	<!-- <br>Topology optimization based on level set method of heat conduction for the heat radiation boundary condition. -->
+	<!-- <br> -->
+	<!-- <br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日. -->
+	<!-- <br>Ishida D., Takahashi T., Cui Y., Isakari H., and Matsumoto T. -->
+	<!-- <br> A convolutional neural network for predicting the eigenvalues of the 2D Helmholtz equation -->
+	<!-- <br> -->
+	<!-- <br>第27回計算工学講演会, にぎわい交流館AU（秋田市）およびオンライン, 2022年6月1-3日. -->
+	<!-- <br>中嶋利名, 本宿裕太, 飯盛浩司. -->
+	<!-- <br>広帯域音響デバイスのための Pade 近似を用いたロバストト ポロジー最適化. -->
+	<!-- <br> -->
 	<br>
-	<br>第14回最適化シンポジウム, 名古屋大学(名古屋市), 2022年11月12日-13日.
-	<br>丸山意生, 飯盛浩司
-	<br>ガウス関数によって重み付けされた周波数応答予測に基づく広帯域デバイスのトポロジー最適化
-	<br>
-	<br>第35回計算力学講演会, オンライン, 2022年11月16日-18日.
-	<br>飯盛浩司
-	<br>scattering frequencyのトポロジー感度の境界積分表現
-	<br>
-	<br>第35回計算力学講演会, オンライン, 2022年11月16日-18日.
-	<br>中嶋利名, 本宿裕太, 飯盛浩司
-	<br>広帯域音響デバイスのための複数のPade近似を用いたロバ ストトポロジー最適化
-	<br>
-	<br>第35回計算力学講演会, オンライン, 2022年11月16日-18日.
-	<br>本宿裕太, 飯盛浩司
-	<br>Pade近似を用いた音響透過率の角周波数平均の予測とそのトポロジー導関数
-	<br>
-	<br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日.
-	<br>Honshuku Y. and Isakari H.
-	<br>A boundary element method for evaluating high-order frequency derivatives of acoustic wave scattering by periodic structures
-	<br>
-	<br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日.
-	<br>Sato S., Takahashi T. Isakari H., and Matsumoto T.						    
-	<br>Topology optimization based on level set method of heat conduction for the heat radiation boundary condition.
-	<br>
-	<br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日.
-	<br>Ishida D., Takahashi T., Cui Y., Isakari H., and Matsumoto T.
-	<br> A convolutional neural network for predicting the eigenvalues of the 2D Helmholtz equation
-	<br>
-	<br>第27回計算工学講演会, にぎわい交流館AU（秋田市）およびオンライン, 2022年6月1-3日.
-	<br>中嶋利名, 本宿裕太, 飯盛浩司.
-	<br>広帯域音響デバイスのための Pade 近似を用いたロバストト ポロジー最適化.
-	<br>
-
 	<br>
 	<h3 class="heading"> <b>業績一覧</b> <br> <b>List of publications</b> </h3>
 	古いものを含む完全なリストは<a href="./hp.pdf">こちら</a><br>
