--- a/publications.html
+++ b/publications.html
@@ -79,7 +79,7 @@
 	  <li>
 	    <b>Isakari H.</b><br>
 	    A fast skeletonisation of 2D objects using a generalised double-layer potential and the H-matrix method,<br>
-	    計算数理工学論文集, Vol. 23, pp. ??-??, 2023.
+	    計算数理工学論文集, Vol. 23, pp. 115-121, 2023.
 	  </li>
 	  <!-- <br> -->
 	  <!-- <li> -->
