matsumoto & yoshiki ijnme

--- a/publications.html
+++ b/publications.html
@@ -59,7 +59,13 @@
 	<br>
 	<ol>
 	  <li>
-	    Honshuku Y. and <b>Isakari H.</b><br>
+	    Matsumoto Y., Yoshiki A., and Isakari H.<br>
+	    Calderon-preconditioned boundary integral equations of the Burton-Miller type for transmission problems,<br>
+	    2023, <a href="https://arxiv.org/abs/2312.12787">arXiv:2312.12787</a>.
+	  </li>
+	  <br>
+	  <li>
+	    Honshuku Y. and Isakari H.<br>
 	    BEM-based fast frequency sweep for acoustic scattering by periodic slab,<br>
 	    2023, <a href="https://arxiv.org/abs/2305.08474">arXiv:2305.08474</a>.
 	  </li>
@@ -71,13 +77,13 @@
 	<br>	
 	<ol>
 	  <li>
-	    Toshimitsu R. and <b>Isakari H.</b><br>
+	    Toshimitsu R. and Isakari H.<br>
 	    A Burton-Miller-type boundary element method based on a hybrid integral representation and its application to cavity scattering,<br>
 	    Engineering Analysis with Boundary Elements, Vol. 158, pp. 303-312, 2024, <a href="https://doi.org/10.1016/j.enganabound.2023.11.003">doi:10.1016/j.enganabound.2023.11.003</a>, <a href="https://arxiv.org/abs/2305.15815">arXiv:2305.15815</a>.
 	  </li>
 	  <br>
 	  <li>
-	    <b>Isakari H.</b><br>
+	    Isakari H.<br>
 	    A fast skeletonisation of 2D objects using a generalised double-layer potential and the H-matrix method,<br>
 	    計算数理工学論文集, Vol. 23, pp. 115-121, 2023.
 	  </li>
