--- a/contact.html
+++ b/contact.html
@@ -52,8 +52,9 @@
     <div id="wrapper">
       <section class="content">
 	<h3 class="heading"> 連絡先 <br> Contacts</h3>
+	<p> 223-0061 神奈川県横浜市港北区日吉３丁目１４−１</p>
 	<p> 慶應義塾大学 理工学部 システムデザイン工学科 </p>
-	<p> 矢上キャンパス 25-209 (教員居室), 25-219 & 25-224 (学生居室)</p>
+	<p> 矢上キャンパス 25-219 (教員居室), 25-207 & 25-209 (学生居室)</p>
 	<p> mail: isakari _at_ sd.keio.ac.jp </p>
 
 	<!-- <h3 class="heading"> アクセス <br> Directions </h3> -->
