--- a/publications.html
+++ b/publications.html
@@ -124,6 +124,22 @@
 	<hr>
 	<br>
 	<h2 class="heading"> <b>学会発表</b> <br> <b>Conference contributions</b> </h2>
+	<br>IWACOM-IV, 北九州国際会議場(北九州市), 2024年9月18日-20日.
+	<br>H. Isakari
+	<br>(invited) TBA
+	<br>
+	<br>第29回計算工学講演会, 神戸国際会議場(神戸市), 2024年6月10日-12日.
+	<br>吉規晃弘, 松本安弘, 飯盛浩司
+	<br>トランスミッション問題に対する Burton-Miller 型境界積分方程式の Calderon 前処理について
+	<br>
+	<br>第29回計算工学講演会, 神戸国際会議場(神戸市), 2024年6月10日-12日.
+	<br>神田陽向, 飯盛浩司
+	<br>Julia 言語による境界要素法の実装と評価
+	<br>
+	<br>2024 Japan-Taiwan Joint Online Workshop on Numerical Analysis and Inverse Problems, 京都大学(京都市), 2024年3月9日-10日.
+	<br>H. Isakari
+	<br>(invited) TBA
+	<br>
 	<br>第28回計算工学講演会, つくば国際会議場(つくば市), 2023年5月31日-6月2日.
 	<br>利光陸, 飯盛浩司
 	<br>2次元半無限空間におけるGreen関数を用いない間接型境界要素法による波動散乱解析
