gakumon no susume

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
 	    京大の磯先生たちが企画されている<a href="https://www-an.acs.i.kyoto-u.ac.jp/tj2024/">日本ー台湾共同研究集会</a>で招待講演を行います。数学の研究会で講演するのは久しぶりです。<br>
 	    Prof. Isakari will give an invited talk at <a href="https://www-an.acs.i.kyoto-u.ac.jp/tj2024/"> a Japan-Taiwan Joint workshop</a> organised by Prof. Iso at Kyoto University et al. Super excited to have such a great opportunity with mathematicians!<br>
 	    <br>
+	    ■ 2024/02/09:<br>
+	    理工学部ホームページに我々の最近の研究内容に関する<a href="https://www.st.keio.ac.jp/education/learning/2310.html">拙稿</a>が掲載されました。<br>
+	    Posted a <a href="https://www.st.keio.ac.jp/education/learning/2310.html">short article </a> on our recent works to the University website.<br>
+	    <br>
 	    ■ 2023/12/21:<br>
 	    <a href="https://researchmap.jp/ya-mat">松本君（東工大）</a>、吉規君（M1）との共著論文を投稿しました。長年の懸念であった、トランスミッション問題を高精度・高速に解くことのできる新しい境界要素法を作りました。プレプリが <a href="https://arxiv.org/abs/2312.12787">arXiv</a> から入手可能です。<br>
 	    Submitted a new paper with <a href="https://researchmap.jp/ya-mat?lang=en">Dr. Matsumoto (Tokyo Institute Tech.)</a> and Mr. Yoshiki (M1). We developed a novel boundary element method that can solve transmission problems accurately and efficiently, which has been a long-standing issue in the BEM community. Check <a href="https://arxiv.org/abs/2312.12787">arXiv</a> out!<br>
