--- a/isakari.html
+++ b/isakari.html
@@ -147,7 +147,7 @@
     <td> 科学研究費補助金(萌芽, <b>代表</b>), グリーン関数の求まらない形状の領域における境界要素法, 2021年7月-2023年3月, 課題番号: 21K9764</td>
   </tr>
   <tr>
-    <td> 科学研究費補助金(基盤B, <b>代表</b>), 無限領域における波動散乱問題の解の高階周波数微分とその応用, 2023年4月-2027年3月, 課題番号: 23H03413</td>
+    <td> 科学研究費補助金(基盤B, <b>代表</b>), 無限領域における波動散乱問題の解の高階周波数微分とその応用, 2023年4月-2027年3月, 課題番号: 23H03413 → 23K28103</td>
   </tr>
 </table>
 <br>
