--- a/members.html
+++ b/members.html
@@ -56,24 +56,33 @@
 	<b>教員</b>
 	<br> <a href="isakari.html">飯盛浩司</a><br>
 	<br>
-	<b>M1</b>
+	<b>M2</b>
 	<br>
 	利光陸<br>
 	井上友<br>
 	吉規晃弘<br>
 	<br>
-	<b>B4</b>
+	<b>M1</b>
 	<br>
 	友安恵吾<br>
 	小谷晴<br>
-	神田陽向<br>
-	内田幸太郎<br>
-	中野悠哉<br>
 	安部貴心<br>
+	内田幸太郎<br>
+	<br>
+	<b>B4</b>
+	<br>
+	山崎誠一郎<br>
+	奥田航平<br>
+	高橋真フランソア<br>
+	治田琉斗<br>
 	<br>
 	<h3 class="heading"> 過去のメンバー <br>Alumni </h3>
 	<br>
 	<ol>
+	  <b>2023年度B卒業</b><br>
+	  神田陽向<br>
+	  中野悠哉<br>
+	  <br>
 	  <b>2022年度M修了(名大)</b><br>
 	  本宿裕太<br>
 	  中嶋利名<br>
