--- a/publications.html
+++ b/publications.html
@@ -63,12 +63,6 @@
 	    Calderon-preconditioned boundary integral equations of the Burton-Miller type for transmission problems,<br>
 	    2023, <a href="https://arxiv.org/abs/2312.12787">arXiv:2312.12787</a>.
 	  </li>
-	  <br>
-	  <li>
-	    Honshuku Y. and Isakari H.<br>
-	    BEM-based fast frequency sweep for acoustic scattering by periodic slab,<br>
-	    2023, <a href="https://arxiv.org/abs/2305.08474">arXiv:2305.08474</a>.
-	  </li>
 	</ol>
 	<br>
 	<hr>	
@@ -76,6 +70,12 @@
 	<h2 class="heading"> <b>原著論文</b> <br> <b>Jouranl papers</b> </h2>
 	<br>	
 	<ol>
+	  <li>
+	    Honshuku Y. and Isakari H.<br>
+	    BEM-based fast frequency sweep for acoustic scattering by periodic slab,<br>
+	    to appear in Journal of Computational Physics, 2024, <a href="https://arxiv.org/abs/2305.08474">arXiv:2305.08474</a>.
+	  </li>
+	  <br>
 	  <li>
 	    Toshimitsu R. and Isakari H.<br>
 	    A Burton-Miller-type boundary element method based on a hybrid integral representation and its application to cavity scattering,<br>
