--- a/publications.html
+++ b/publications.html
@@ -67,13 +67,13 @@
 	<br>
 	<hr>	
         <br>
-	<h2 class="heading"> <b>原著論文</b> <br> <b>Jouranl papers</b> </h2>
+	<h2 class="heading"> <b>原著論文</b> <br> <b>Journal papers</b> </h2>
 	<br>	
 	<ol>
 	  <li>
 	    Honshuku Y. and Isakari H.<br>
 	    BEM-based fast frequency sweep for acoustic scattering by periodic slab,<br>
-	    to appear in Journal of Computational Physics, 2024, <a href="https://arxiv.org/abs/2305.08474">arXiv:2305.08474</a>.
+	    Journal of Computational Physics, Vol. 509, 113046 (20 pages), 2024, <a href="https://doi.org/10.1016/j.jcp.2024.113046">doi:10.1016/j.jcp.2024.113046</a>, <a href="https://arxiv.org/abs/2305.08474">arXiv:2305.08474</a>.
 	  </li>
 	  <br>
 	  <li>
