--- a/publications.html
+++ b/publications.html
@@ -124,21 +124,41 @@
 	<hr>
 	<br>
 	<h2 class="heading"> <b>学会発表</b> <br> <b>Conference contributions</b> </h2>
-	<br>IWACOM-IV, 北九州国際会議場(北九州市), 2024年9月18日-20日.
+	<br>Symposium of the international association for boundary element methods (IABEM 2024), Hong Kong University of Science and Technology (Hong Kong), 2024年12月4日-6日.
+	<br>K. Tomoyasu and H. Isakari
+	<br>Performance evaluation of the Calderon preconditioning for the Burton–Miller boundary element method in three-dimensional transmission problems
+	<br>
+	<br>第37回計算力学講演会 (CMD2024), トークネットホール仙台 (仙台市), 2024年10月18日-20日.
+	<br>小谷晴, 飯盛浩司
+	<br>TBA
+	<br>
+	<br>第37回計算力学講演会 (CMD2024), トークネットホール仙台 (仙台市), 2024年10月18日-20日.
+	<br>井上友, 飯盛浩司
+	<br>TBA
+	<br>
+	<br>IWACOM-IV, 北九州国際会議場 (北九州市), 2024年9月18日-20日.
 	<br>H. Isakari
 	<br>(invited) TBA
 	<br>
-	<br>第29回計算工学講演会, 神戸国際会議場(神戸市), 2024年6月10日-12日.
+	<br>第67回理論応用力学講演会, 神奈川大学みなとみらいキャンパス (横浜市), 2024年9月3日-6日.
+	<br>友安恵吾, 飯盛浩司
+	<br>TBA
+	<br>
+	<br> 16th International Conference on Mathematical and Numerical Aspects of Wave Propagation (WAVES 2024), Harnack House (Berlin), 2024年6月30日-7月5日.
+	<br> H. Isakari
+	<br> On a boundary integral expression for the topological perturbation of the scattering eigenfrequency
+	<br>
+	<br>第29回計算工学講演会, 神戸国際会議場 (神戸市), 2024年6月10日-12日.
 	<br>吉規晃弘, 松本安弘, 飯盛浩司
 	<br>トランスミッション問題に対する Burton-Miller 型境界積分方程式の Calderon 前処理について
 	<br>
-	<br>第29回計算工学講演会, 神戸国際会議場(神戸市), 2024年6月10日-12日.
+	<br>第29回計算工学講演会, 神戸国際会議場 (神戸市), 2024年6月10日-12日.
 	<br>神田陽向, 飯盛浩司
 	<br>Julia 言語による境界要素法の実装と評価
 	<br>
 	<br>2024 Japan-Taiwan Joint Online Workshop on Numerical Analysis and Inverse Problems, 京都大学(京都市), 2024年3月9日-10日.
 	<br>H. Isakari
-	<br>(invited) TBA
+	<br>(invited) Towards a topology optimisation of wave devices with wide working bandwidth
 	<br>
 	<br>第28回計算工学講演会, つくば国際会議場(つくば市), 2023年5月31日-6月2日.
 	<br>利光陸, 飯盛浩司
