--- a/publications.html
+++ b/publications.html
@@ -125,28 +125,41 @@
 	<br>
 	<h2 class="heading"> <b>学会発表</b> <br> <b>Conference contributions</b> </h2>
 	<br>Symposium of the international association for boundary element methods (IABEM 2024), Hong Kong University of Science and Technology (Hong Kong), 2024年12月4日-6日.
+	<br>R. Toshimitsu and H. Isakari
+	<br>TBA
+	<br>
+
+	<br>Symposium of the international association for boundary element methods (IABEM 2024), Hong Kong University of Science and Technology (Hong Kong), 2024年12月4日-6日.
 	<br>K. Tomoyasu and H. Isakari
 	<br>Performance evaluation of the Calderon preconditioning for the Burton–Miller boundary element method in three-dimensional transmission problems
 	<br>
 	<br>第37回計算力学講演会 (CMD2024), トークネットホール仙台 (仙台市), 2024年10月18日-20日.
 	<br>小谷晴, 飯盛浩司
-	<br>TBA
+	<br>周波数導関数の最小化による光学迷彩装置のトポロジー最適設計
 	<br>
 	<br>第37回計算力学講演会 (CMD2024), トークネットホール仙台 (仙台市), 2024年10月18日-20日.
 	<br>井上友, 飯盛浩司
-	<br>TBA
+	<br>Non-overlapping DDM に基づく大規模有限要素解析の性能評価
 	<br>
 	<br>IWACOM-IV, 北九州国際会議場 (北九州市), 2024年9月18日-20日.
 	<br>H. Isakari
-	<br>(invited) TBA
+	<br>(invited) On a topological derivative related to scattered fields by a periodic structure
+	<br>
+	<br>日本応用数理学会2024年度年会, 京都大学大学院理学研究科 (京都市), 2024年9月14日-16日
+	<br>飯盛浩司
+	<br>周期構造による散乱透過率のトポロジー感度解析について
+	<br>
+	<br>日本応用数理学会2024年度年会, 京都大学大学院理学研究科 (京都市), 2024年9月14日-16日
+	<br>飯盛浩司
+	<br>一般化二重層ポテンシャルの高速算法とその応用
 	<br>
 	<br>第67回理論応用力学講演会, 神奈川大学みなとみらいキャンパス (横浜市), 2024年9月3日-6日.
 	<br>友安恵吾, 飯盛浩司
-	<br>TBA
+	<br>3次元音響問題の解の高階周波数微分計算のためのCalderonの前処理について
 	<br>
-	<br> 16th International Conference on Mathematical and Numerical Aspects of Wave Propagation (WAVES 2024), Harnack House (Berlin), 2024年6月30日-7月5日.
-	<br> H. Isakari
-	<br> On a boundary integral expression for the topological perturbation of the scattering eigenfrequency
+	<br>16th International Conference on Mathematical and Numerical Aspects of Wave Propagation (WAVES 2024), Harnack House (Berlin), 2024年6月30日-7月5日.
+	<br>H. Isakari
+	<br>On a boundary integral expression for the topological perturbation of the scattering eigenfrequency
 	<br>
 	<br>第29回計算工学講演会, 神戸国際会議場 (神戸市), 2024年6月10日-12日.
 	<br>吉規晃弘, 松本安弘, 飯盛浩司
