--- a/members.html
+++ b/members.html
@@ -38,7 +38,7 @@
 	    <li class="current-menu-item">
 	      <a href="members.html"><strong>メンバー</strong><span>Members</span></a>
 	    </li>
-	    <li><a href="https://scrapbox.io/isakarilab-public/目次"><strong>研究内容</strong><span>Studies</span></a></li>
+	    <li><a href="recruitment.html"><strong>リクルート</strong><span>Recruitment</span></a></li>
 	    <li>
 	      <a href="publications.html"><strong>業績</strong><span>Publications</span></a>
 	    </li>
