--- a/publications.html
+++ b/publications.html
@@ -38,10 +38,7 @@
 	    <li>
 	      <a href="members.html"><strong>メンバー</strong><span>Members</span></a>
 	    </li>
-	    <li>
-	      <a href="https://scrapbox.io/isakarilab-public/目次"><strong>研究内容</strong><span>Studies</span></a>
-	    </li>
-	    <li class="current-menu-item">
+	    <li><a href="recruitment.html"><strong>リクルート</strong><span>Recruitment</span></a></li>	    <li class="current-menu-item">
 	      <a href="publications.html"><strong>業績</strong><span>Publications</span></a>
 	    </li>
 	    <li><a href="lecture.html"><strong>講義</strong><span>Lectures</span></a></li>
