--- a/isakari.html
+++ b/isakari.html
@@ -21,7 +21,7 @@
     <header id="header" role="banner">
       <h1>慶應義塾大学理工学部システムデザイン工学科<br>Dept. of Sys. Desg. Eng., Fac. of Sci. and Tech., Keio Univ. </h1>
       <div class="logo">
-	<a href="index.html" title="Isakari Lab." rel="home">計算力学研究室<br>飯盛研究室<span>Computational Mechanics Lab. <br> Isakari Lab.<br><br></span></a>
+	<a href="index.html" title="Isakari Lab." rel="home">飯盛研究室<br> Isakari Lab.<br><br></a>
       </div>
       <div class="info">
 	<!-- <p class="tel"><span>Tel:</span> 045-xxx-xxxx</p> -->
@@ -37,12 +37,8 @@
 	    <li> <a href="index.html"><strong>トップページ</strong><span>Top</span></a></li>
 	    <li class="current-menu-item">
 	      <a href="index.html"><strong>メンバー</strong><span>Members</span></a>
-	      <ul class="sub-menu">
-		<li><a href="isakari.html">教員<span>PI</span></a></li>
-		<li><a href="student.html">学生<span>Students</span></a></li>
-	      </ul>
 	    </li>
-	    <li><a href="https://scrapbox.io/isakarilab-public/目次"><strong>研究内容</strong><span>Studies</span></a></li>
+<li><a href="recruitment.html"><strong>リクルート</strong><span>Recruitment</span></a></li>
 	    <li>
 	      <a href="publications.html"><strong>業績</strong><span>Publications</span></a>
 	    </li>
