--- a/lecture.html
+++ b/lecture.html
@@ -21,7 +21,7 @@
     <header id="header" role="banner">
       <h1>慶應義塾大学理工学部システムデザイン工学科<br>Dept. of Sys. Desg. Eng., Fac. of Sci. and Tech., Keio Univ. </h1>
       <div class="logo">
-	<a href="index.html" title="Isakari Lab." rel="home">計算力学研究室<br>飯盛研究室<span>Computational Mechanics Lab. <br> Isakari Lab.<br><br></span></a>
+      <a href="index.html" title="Isakari Lab." rel="home">飯盛研究室<br> Isakari Lab.<br><br></a>
       </div>
       <div class="info">
 	<!-- <p class="tel"><span>Tel:</span> 045-xxx-xxxx</p> -->
