--- a/publications.html
+++ b/publications.html
@@ -21,7 +21,7 @@
     <header id="header" role="banner">
       <h1>慶應義塾大学理工学部システムデザイン工学科<br>Dept. of Sys. Desg. Eng., Fac. of Sci. and Tech., Keio Univ. </h1>
       <div class="logo">
-	<a href="index.html" title="Isakari Lab." rel="home">計算力学研究室<br>飯盛研究室<span>Computational Mechanics Lab. <br> Isakari Lab.<br><br></span></a>
+      <a href="index.html" title="Isakari Lab." rel="home">飯盛研究室<br> Isakari Lab.<br><br></a>
       </div>
       <div class="info">
 	<!-- <p class="tel"><span>Tel:</span> 045-xxx-xxxx</p> -->
@@ -38,9 +38,8 @@
 	    <li>
 	      <a href="members.html"><strong>メンバー</strong><span>Members</span></a>
 	    </li>
-	    <li><a href="recruitment.html"><strong>リクルート</strong><span>Recruitment</span></a></li>	    <li class="current-menu-item">
-	      <a href="publications.html"><strong>業績</strong><span>Publications</span></a>
-	    </li>
+	    <li><a href="recruitment.html"><strong>リクルート</strong><span>Recruitment</span></a></li>
+	    <li class="current-menu-item"><a href="publications.html"><strong>業績</strong><span>Publications</span></a> </li>
 	    <li><a href="lecture.html"><strong>講義</strong><span>Lectures</span></a></li>
 	    <li><a href="contact.html"><strong>連絡先・アクセス</strong><span>Contacts・Directions</span></a></li>
 	  </ul>
@@ -50,176 +49,160 @@
 
     <div id="wrapper">
       <section class="content">
-	<h3 class="heading"> <b>最近の業績</b> <br> <b>Recent publications</b> </h3>
-        <br>
-	<h2 class="heading"> <b>プレプリント</b> <br> <b>Preprints</b> </h2>
+	ここには2022年度以降の業績を記載しています。古いものを含む飯盛の完全な論文のリストは<a href="https://researchmap.jp/isakari">resarchmap</a>をご覧ください<br>
+	下記リストの<u><b>太字</b></u>は研究室所属学生または卒業生を表します<br>
+	<br><h2 class="heading", style="font-size: 18px;"> <b>プレプリント</b> <br> <b>Preprints</b> </h2>
+	<br>Y. Matsumoto, <u><b>A. Yoshiki</b></u>, and H. Isakari<br>
+	Calderon-preconditioned boundary integral equations of the Burton-Miller type for transmission problems,<br>
+	2023, <a href="https://arxiv.org/abs/2312.12787">arXiv:2312.12787</a>
 	<br>
-	<ol>
-	  <li>
-	    Matsumoto Y., Yoshiki A., and Isakari H.<br>
-	    Calderon-preconditioned boundary integral equations of the Burton-Miller type for transmission problems,<br>
-	    2023, <a href="https://arxiv.org/abs/2312.12787">arXiv:2312.12787</a>.
-	  </li>
-	</ol>
+<!-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+	<br><h3 class="heading", style="font-size: 18px;"> <b> 2024 </b> </h3>
+	<br><h2 class="heading", style="font-size: 18px;"> <b>原著論文</b> <br> <b>Journal papers</b> </h2><br>
+	<u><b>Y. Honshuku</b></u> and H. Isakari<br>
+	BEM-based fast frequency sweep for acoustic scattering by periodic slab,<br>
+	Journal of Computational Physics, Vol. 509, 113046 (20 pages), 2024, <a href="https://doi.org/10.1016/j.jcp.2024.113046">doi:10.1016/j.jcp.2024.113046</a>, <a href="https://arxiv.org/abs/2305.08474">arXiv:2305.08474</a>.
 	<br>
-	<hr>	
-        <br>
-	<h2 class="heading"> <b>原著論文</b> <br> <b>Journal papers</b> </h2>
-	<br>	
-	<ol>
-	  <li>
-	    Honshuku Y. and Isakari H.<br>
-	    BEM-based fast frequency sweep for acoustic scattering by periodic slab,<br>
-	    Journal of Computational Physics, Vol. 509, 113046 (20 pages), 2024, <a href="https://doi.org/10.1016/j.jcp.2024.113046">doi:10.1016/j.jcp.2024.113046</a>, <a href="https://arxiv.org/abs/2305.08474">arXiv:2305.08474</a>.
-	  </li>
-	  <br>
-	  <li>
-	    Toshimitsu R. and Isakari H.<br>
-	    A Burton-Miller-type boundary element method based on a hybrid integral representation and its application to cavity scattering,<br>
-	    Engineering Analysis with Boundary Elements, Vol. 158, pp. 303-312, 2024, <a href="https://doi.org/10.1016/j.enganabound.2023.11.003">doi:10.1016/j.enganabound.2023.11.003</a>, <a href="https://arxiv.org/abs/2305.15815">arXiv:2305.15815</a>.
-	  </li>
-	  <br>
-	  <li>
-	    Isakari H.<br>
-	    A fast skeletonisation of 2D objects using a generalised double-layer potential and the H-matrix method,<br>
-	    計算数理工学論文集, Vol. 23, pp. 115-121, 2023.
-	  </li>
-	  <!-- <br> -->
-	  <!-- <li> -->
-	  <!--   Honshuku Y. and <b>Isakari H.</b><br> -->
-	  <!--   A topology optimisation of acoustic devices based on the frequency response estimation with the Padé approximation,<br> -->
-	  <!--   Applied Mathematical Modelling, Vol. 110, pp. 819-840, 2022, <a href="https://doi.org/10.1016/j.apm.2022.06.020">doi:10.1016/j.apm.2022.06.020</a>, <a href="https://arxiv.org/abs/2111.12443">arXiv:2111.12443.</a> -->
-	  <!-- </li> -->
-	  <!-- <br> -->
-	  <!-- <li> -->
-	  <!--   Matsushima K., <b>Isakari H.</b>, Takahashi T., and Matsumoto T.<br> -->
-	  <!--   A topology optimization of open acoustic waveguides based on a scattering matrix method,<br> -->
-	  <!--   Wave Motion, Vol. 113, p. 102987 (18pages), 2022, <a href="https://doi.org/10.1016/j.wavemoti.2022.102987">doi:10.1016/j.wavemoti.2022.102987</a>, <a href="https://arxiv.org/abs/2201.09533">arXiv:2201.09533.</a> -->
-	  <!-- </li> -->
-	  <!-- <br> -->
-	  <!-- <li> -->
-	  <!--   Qin J., <b> Isakari H.</b>, Takahashi T., and Matsumoto T.<br> -->
-	  <!--   "A robust topology optimisation for wideband structures in acoustic-elastodynamic coupled fields"<br> -->
-	  <!--   Engineering Analysis with Boundary Elements, Vol. 140, pp. 544-561, 2022, <a href="https://doi.org/10.1016/j.enganabound.2022.04.012">doi:10.1016/j.enganabound.2022.04.012</a><br> -->
-	  <!-- </li> -->
-	  <!-- <br> -->
-	  <!-- <li> -->
-	  <!--   Takahashi T., Hirai T., <b> Isakari H.</b>, and Matsumoto T. -->
-	  <!--   <br> -->
-	  <!--   "An isogeometric boundary element method for three-dimensional doubly-periodic layered structures in electromagnetics"<br> -->
-	  <!--   Engineering Analysis with Boundary Elements, Vol. 136, pp. 37-54, 2022, <a href="https://doi.org/10.1016/j.enganabound.2021.11.020">doi:10.1016/j.enganabound.2021.11.020</a><br> -->
-	  <!-- </li> -->
-	  <!-- <br> -->
-	  <!-- <li> -->
-	  <!--   Takahashi T., Sato D., <b> Isakari H.</b>, and Matsumoto T. -->
-	  <!--   <br> -->
-	  <!--   "A shape optimisation with the isogeometric boundary element method and adjoint variable method for the three-dimensional Helmholtz equation"<br> -->
-	  <!--   Computer-Aided Design, Vol. 142, 103126 (17pages), 2022, <a href="https://doi.org/10.1016/j.cad.2021.103126">doi:10.1016/j.cad.2021.103126</a><br> -->
-	  <!-- </li> -->
-	</ol>
+	<br><u><b>R. Toshimitsu</b></u> and H. Isakari<br>
+	A Burton-Miller-type boundary element method based on a hybrid integral representation and its application to cavity scattering,<br>
+	Engineering Analysis with Boundary Elements, Vol. 158, pp. 303-312, 2024, <a href="https://doi.org/10.1016/j.enganabound.2023.11.003">doi:10.1016/j.enganabound.2023.11.003</a>, <a href="https://arxiv.org/abs/2305.15815">arXiv:2305.15815</a>
 	<br>
-	<hr>
-	<br>
-	<h2 class="heading"> <b>学会発表</b> <br> <b>Conference contributions</b> </h2>
+	<br><h2 class="heading", style="font-size: 18px;"> <b>学会発表</b> <br> <b>Conference contributions</b> </h2>
+	<br><u><b>R. Toshimitsu</b></u> and H. Isakari
+	<br>Structural optimisation for acoustic cavity problems in half space using a hybrid boundary integral representation
 	<br>Symposium of the international association for boundary element methods (IABEM 2024), Hong Kong University of Science and Technology (Hong Kong), 2024年12月4日-6日.
-	<br>R. Toshimitsu and H. Isakari
-	<br>TBA
 	<br>
 
-	<br>Symposium of the international association for boundary element methods (IABEM 2024), Hong Kong University of Science and Technology (Hong Kong), 2024年12月4日-6日.
-	<br>K. Tomoyasu and H. Isakari
+	<br><u><b>K. Tomoyasu</b></u> and H. Isakari
 	<br>Performance evaluation of the Calderon preconditioning for the Burton–Miller boundary element method in three-dimensional transmission problems
+	<br>Symposium of the international association for boundary element methods (IABEM 2024), Hong Kong University of Science and Technology (Hong Kong), 2024年12月4日-6日.
 	<br>
-	<br>第37回計算力学講演会 (CMD2024), トークネットホール仙台 (仙台市), 2024年10月18日-20日.
-	<br>小谷晴, 飯盛浩司
+	<br><u><b>小谷晴</b></u>, 飯盛浩司
 	<br>周波数導関数の最小化による光学迷彩装置のトポロジー最適設計
-	<br>
 	<br>第37回計算力学講演会 (CMD2024), トークネットホール仙台 (仙台市), 2024年10月18日-20日.
-	<br>井上友, 飯盛浩司
-	<br>Non-overlapping DDM に基づく大規模有限要素解析の性能評価
 	<br>
-	<br>IWACOM-IV, 北九州国際会議場 (北九州市), 2024年9月18日-20日.
+	<br><u><b>井上友</b></u>, 飯盛浩司
+	<br>Non-overlapping DDM に基づく大規模有限要素解析の性能評価
+	<br>第37回計算力学講演会 (CMD2024), トークネットホール仙台 (仙台市), 2024年10月18日-20日.
+	<br>
 	<br>H. Isakari
 	<br>(invited) On a topological derivative related to scattered fields by a periodic structure
+	<br>IWACOM-IV, 北九州国際会議場 (北九州市), 2024年9月18日-20日.
 	<br>
 	<br>日本応用数理学会2024年度年会, 京都大学大学院理学研究科 (京都市), 2024年9月14日-16日
 	<br>飯盛浩司
 	<br>周期構造による散乱透過率のトポロジー感度解析について
 	<br>
-	<br>日本応用数理学会2024年度年会, 京都大学大学院理学研究科 (京都市), 2024年9月14日-16日
 	<br>飯盛浩司
 	<br>一般化二重層ポテンシャルの高速算法とその応用
+	<br>日本応用数理学会2024年度年会, 京都大学大学院理学研究科 (京都市), 2024年9月14日-16日
 	<br>
-	<br>第67回理論応用力学講演会, 神奈川大学みなとみらいキャンパス (横浜市), 2024年9月3日-6日.
-	<br>友安恵吾, 飯盛浩司
+	<br><u><b>友安恵吾</b></u>, 飯盛浩司
 	<br>3次元音響問題の解の高階周波数微分計算のためのCalderonの前処理について
+	<br>第67回理論応用力学講演会, 神奈川大学みなとみらいキャンパス (横浜市), 2024年9月3日-6日.
 	<br>
-	<br>16th International Conference on Mathematical and Numerical Aspects of Wave Propagation (WAVES 2024), Harnack House (Berlin), 2024年6月30日-7月5日.
 	<br>H. Isakari
 	<br>On a boundary integral expression for the topological perturbation of the scattering eigenfrequency
+	<br>16th International Conference on Mathematical and Numerical Aspects of Wave Propagation (WAVES 2024), Harnack House (Berlin), 2024年6月30日-7月5日.
 	<br>
-	<br>第29回計算工学講演会, 神戸国際会議場 (神戸市), 2024年6月10日-12日.
-	<br>吉規晃弘, 松本安弘, 飯盛浩司
+	<br><u><b>吉規晃弘</b></u>, 松本安弘, 飯盛浩司
 	<br>トランスミッション問題に対する Burton-Miller 型境界積分方程式の Calderon 前処理について
-	<br>
 	<br>第29回計算工学講演会, 神戸国際会議場 (神戸市), 2024年6月10日-12日.
-	<br>神田陽向, 飯盛浩司
-	<br>Julia 言語による境界要素法の実装と評価
 	<br>
-	<br>2024 Japan-Taiwan Joint Online Workshop on Numerical Analysis and Inverse Problems, 京都大学(京都市), 2024年3月9日-10日.
+	<br><u><b>神田陽向</b></u>, 飯盛浩司
+	<br>Julia 言語による境界要素法の実装と評価
+	<br>第29回計算工学講演会, 神戸国際会議場 (神戸市), 2024年6月10日-12日.
+	<br>
 	<br>H. Isakari
 	<br>(invited) Towards a topology optimisation of wave devices with wide working bandwidth
+	<br>2024 Japan-Taiwan Joint Online Workshop on Numerical Analysis and Inverse Problems, 京都大学(京都市), 2024年3月9日-10日.
 	<br>
-	<br>第28回計算工学講演会, つくば国際会議場(つくば市), 2023年5月31日-6月2日.
-	<br>利光陸, 飯盛浩司
+	<br><h2 class="heading", style="font-size: 18px;"> <b>受賞</b> <br> <b>Awards</b> </h2>
+	<br><u><b>利光陸</b></u>
+	<br>Best Presentation Award (Tokyo Tech., Keio Joint Seminar)
+	<br>
+<!------------------------------------------------------------------------------------------------------------------>
+	<br><h3 class="heading", style="font-size: 18px;"> <b> 2023 </b> </h3>
+	<br><h2 class="heading", style="font-size: 18px;"> <b>原著論文</b> <br> <b>Journal papers</b> </h2><br>
+	Isakari H.<br>
+	A fast skeletonisation of 2D objects using a generalised double-layer potential and the H-matrix method,<br>
+	計算数理工学論文集, Vol. 23, pp. 115-121, 2023, <a href="https://doi.org/10.60443/jascome.23.0_115">doi:10.60443/jascome.23.0_115</a><br>
+	<br><h2 class="heading", style="font-size: 18px;"> <b>学会発表</b> <br> <b>Conference contributions</b> </h2>
+	<br><u><b>利光陸</b></u>, 飯盛浩司
 	<br>2次元半無限空間におけるGreen関数を用いない間接型境界要素法による波動散乱解析
+	<br>第28回計算工学講演会, つくば国際会議場(つくば市), 2023年5月31日-6月2日
 	<br>
-	<br>第28回計算工学講演会, つくば国際会議場(つくば市), 2023年5月31日-6月2日.
-	<br>本宿裕太, 飯盛浩司
+	<br><u><b>本宿裕太</u></b>, 飯盛浩司
 	<br>2次元1周期構造によるスカラー波動散乱場のfast frequency sweepについて
+	<br>第28回計算工学講演会, つくば国際会議場(つくば市), 2023年5月31日-6月2日
 	<br>
-	<!-- <br>第14回最適化シンポジウム, 名古屋大学(名古屋市), 2022年11月12日-13日. -->
-	<!-- <br>本宿裕太, 飯盛浩司 -->
-	<!-- <br>遠方場係数の有理多項式近似に基づく周期散乱構造のトポロジー最適化について -->
-	<!-- <br> -->
-	<!-- <br>第14回最適化シンポジウム, 名古屋大学(名古屋市), 2022年11月12日-13日. -->
-	<!-- <br>丸山意生, 飯盛浩司 -->
-	<!-- <br>ガウス関数によって重み付けされた周波数応答予測に基づく広帯域デバイスのトポロジー最適化 -->
-	<!-- <br> -->
-	<!-- <br>第35回計算力学講演会, オンライン, 2022年11月16日-18日. -->
-	<!-- <br>飯盛浩司 -->
-	<!-- <br>scattering frequencyのトポロジー感度の境界積分表現 -->
-	<!-- <br> -->
-	<!-- <br>第35回計算力学講演会, オンライン, 2022年11月16日-18日. -->
-	<!-- <br>中嶋利名, 本宿裕太, 飯盛浩司 -->
-	<!-- <br>広帯域音響デバイスのための複数のPade近似を用いたロバ ストトポロジー最適化 -->
-	<!-- <br> -->
-	<!-- <br>第35回計算力学講演会, オンライン, 2022年11月16日-18日. -->
-	<!-- <br>本宿裕太, 飯盛浩司 -->
-	<!-- <br>Pade近似を用いた音響透過率の角周波数平均の予測とそのトポロジー導関数 -->
-	<!-- <br> -->
-	<!-- <br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日. -->
-	<!-- <br>Honshuku Y. and Isakari H. -->
-	<!-- <br>A boundary element method for evaluating high-order frequency derivatives of acoustic wave scattering by periodic structures -->
-	<!-- <br> -->
-	<!-- <br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日. -->
-	<!-- <br>Sato S., Takahashi T. Isakari H., and Matsumoto T.						     -->
-	<!-- <br>Topology optimization based on level set method of heat conduction for the heat radiation boundary condition. -->
-	<!-- <br> -->
-	<!-- <br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日. -->
-	<!-- <br>Ishida D., Takahashi T., Cui Y., Isakari H., and Matsumoto T. -->
-	<!-- <br> A convolutional neural network for predicting the eigenvalues of the 2D Helmholtz equation -->
-	<!-- <br> -->
-	<!-- <br>第27回計算工学講演会, にぎわい交流館AU（秋田市）およびオンライン, 2022年6月1-3日. -->
-	<!-- <br>中嶋利名, 本宿裕太, 飯盛浩司. -->
-	<!-- <br>広帯域音響デバイスのための Pade 近似を用いたロバストト ポロジー最適化. -->
-	<!-- <br> -->
+	<br><h2 class="heading", style="font-size: 18px;"> <b>受賞</b> <br> <b>Awards</b> </h2>
+	<br><b><u>小谷晴</u></b>
+	<br>SD卒業研究優秀発表賞
 	<br>
+	<!------------------------------------------------------------------------------------------------------------------>
+	<br><h3 class="heading", style="font-size: 18px;"> <b> 2022 </b> </h3>
+	<br><h2 class="heading", style="font-size: 18px;"> <b>原著論文</b> <br> <b>Journal papers</b> </h2>
+	<br><b><u>Y. Honshuku</u></b> and H. Isakari
+	<br>A topology optimisation of acoustic devices based on the frequency response estimation with the Padé approximation
+	<br>Applied Mathematical Modelling, Vol. 110, pp. 819-840, 2022, <a href="https://doi.org/10.1016/j.apm.2022.06.020">doi:10.1016/j.apm.2022.06.020</a>, <a href="https://arxiv.org/abs/2111.12443">arXiv:2111.12443.</a>
 	<br>
-	<h3 class="heading"> <b>業績一覧</b> <br> <b>List of publications</b> </h3>
-	古いものを含む完全なリストは<a href="./hp.pdf">こちら</a><br>
-	See <a href="./hp.pdf"> this PDF</a> for the complete list of publications.
-        <br>	
+	<br><u><b>K. Matsushima</b></u>, H. Isakari, T. Takahashi, and T. Matsumoto
+	<br>A topology optimization of open acoustic waveguides based on a scattering matrix method
+	<br> Wave Motion, Vol. 113, p. 102987 (18pages), 2022, <a href="https://doi.org/10.1016/j.wavemoti.2022.102987">doi:10.1016/j.wavemoti.2022.102987</a>, <a href="https://arxiv.org/abs/2201.09533">arXiv:2201.09533.</a>
+	<br>
+	<br><u><b>J. Qin</b></u>, H. Isakari, T. Takahashi, and T. Matsumoto
+	<br>A robust topology optimisation for wideband structures in acoustic-elastodynamic coupled fields
+	<br>Engineering Analysis with Boundary Elements, Vol. 140, pp. 544-561, 2022, <a href="https://doi.org/10.1016/j.enganabound.2022.04.012">doi:10.1016/j.enganabound.2022.04.012</a>
+	<br>
+	<br>T. Takahashi, T. Hirai, H. Isakari, and T. Matsumoto
+	<br>An isogeometric boundary element method for three-dimensional doubly-periodic layered structures in electromagnetics
+	<br>Engineering Analysis with Boundary Elements, Vol. 136, pp. 37-54, 2022, <a href="https://doi.org/10.1016/j.enganabound.2021.11.020">doi:10.1016/j.enganabound.2021.11.020</a>
+	<br>
+	<br>T. Takahashi, D. Sato, H. Isakari, and T. Matsumoto	
+	<br>A shape optimisation with the isogeometric boundary element method and adjoint variable method for the three-dimensional Helmholtz equation
+	<br>Computer-Aided Design, Vol. 142, 103126 (17pages), 2022, <a href="https://doi.org/10.1016/j.cad.2021.103126">doi:10.1016/j.cad.2021.103126</a>
+	<br>
+	<br><h2 class="heading", style="font-size: 18px;"> <b>学会発表</b> <br> <b>Conference contributions</b> </h2>
+	<br><b><u>本宿裕太</u></b>, 飯盛浩司
+	<br>遠方場係数の有理多項式近似に基づく周期散乱構造のトポロジー最適化について
+	<br>第14回最適化シンポジウム, 名古屋大学(名古屋市), 2022年11月12日-13日.
+	<br>
+	<br><u><b>丸山意生</b></u>, 飯盛浩司
+	<br>ガウス関数によって重み付けされた周波数応答予測に基づく広帯域デバイスのトポロジー最適化
+	<br>第14回最適化シンポジウム, 名古屋大学(名古屋市), 2022年11月12日-13日.
+	<br>
+	<br>飯盛浩司
+	<br>scattering frequencyのトポロジー感度の境界積分表現
+	<br>第35回計算力学講演会, オンライン, 2022年11月16日-18日.
+	<br>
+	<br><u><b>中嶋利名</b></u>, <b><u>本宿裕太</b></u>, 飯盛浩司
+	<br>広帯域音響デバイスのための複数のPade近似を用いたロバ ストトポロジー最適化
+	<br>第35回計算力学講演会, オンライン, 2022年11月16日-18日.
+	<br>
+	<br><u><b>本宿裕太</b></u>, 飯盛浩司
+	<br>Pade近似を用いた音響透過率の角周波数平均の予測とそのトポロジー導関数
+	<br>第35回計算力学講演会, オンライン, 2022年11月16日-18日.
+	<br>
+	<br><u><b>Y. Honshuku</b></u> and Isakari H.
+	<br>A boundary element method for evaluating high-order frequency derivatives of acoustic wave scattering by periodic structures
+	<br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日.
+	<br>
+	<br>S. Sato, T. Takahashi. H. Isakari, and T> Matsumoto
+	<br>Topology optimization based on level set method of heat conduction for the heat radiation boundary condition.
+	<br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日.
+	<br>
+	<br>D. Ishida, T. Takahashi, Y. Cui, H. Isakari, and T. Matsumoto
+	<br>A convolutional neural network for predicting the eigenvalues of the 2D Helmholtz equation
+	<br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日.
+	<br>
+	<br><u><b>中嶋利名</b></u>, <b><u>本宿裕太</b></u>, 飯盛浩司
+	<br>広帯域音響デバイスのための Pade 近似を用いたロバストト ポロジー最適化.
+	<br>第27回計算工学講演会, にぎわい交流館AU（秋田市）およびオンライン, 2022年6月1-3日.
+	<br>
+	<br><h2 class="heading", style="font-size: 18px;"> <b>受賞</b> <br> <b>Awards</b> </h2>
+	<br><b><u>利光陸</u></b>
+	<br>SD卒業研究優秀発表賞
       </section>
     </div>
     
