--- a/recruitment.html
+++ b/recruitment.html
@@ -18,7 +18,7 @@
   <header id="header" role="banner">
     <h1>慶應義塾大学理工学部システムデザイン工学科<br>Dept. of Sys. Desg. Eng., Fac. of Sci. and Tech., Keio Univ. </h1>
     <div class="logo">
-      <a href="index.html" title="Isakari Lab." rel="home">計算力学研究室<br>飯盛研究室<span>Computational Mechanics Lab. <br> Isakari Lab.<br><br></span></a>
+	<a href="index.html" title="Isakari Lab." rel="home">飯盛研究室<br> Isakari Lab.<br><br></span></a>
     </div>
   </header>
 
@@ -90,7 +90,7 @@
 	<li> 10月ごろから: 本格的に卒論 </li>
       </ol>
       <br>
-      なお、コアタイムのような不合理な制度は採用していません。各自が最も効果的にパフォーマンスを発揮できることを重視しています。研究室では、週に 2 回のミーティングを行い、他大学の先生を交えた勉強会も週に 1 回実施しています。このような環境により、教員だけでなく、研究室の同期や先輩後輩との良質で密なコミュニケーションを通じて研究を進めています。研究成果は国際・国内学会や学術雑誌へと積極的に発表しています。四年生の卒論がそのまま国際誌に掲載されることもしばしばです。研究室の学生の成果については、<a href="./index.html">トップページ</a>のNewsや<a href="publications.html">業績</a>のページをご覧ください。<br><br>
+      なお、コアタイムのような不合理な制度は採用していません。各自が最も効果的にパフォーマンスを発揮できることを重視しています。研究室では、週に 2 回のミーティングを行い、他大学の先生を交えた勉強会も週に 1 回実施しています。このような環境により、教員だけでなく、研究室の同期や先輩後輩との良質で密なコミュニケーションを通じて研究を進めています。なお、個々人の研究にあたっては高性能な計算機を利用する必要がありますが、研究室で保有している数百GBから数TB（!）のメモリを搭載した20台程度の数値計算専用ワークステーションの他、<a href=https://jhpcn-kyoten.itc.u-tokyo.ac.jp/abstract/jh240031>JHPCN</a>の枠組みでスパコンを利用することもできます。もちろん、良い成果は国際・国内学会や学術雑誌へと積極的に発表しています。四年生の卒論がそのまま国際誌に掲載されることもしばしばです。研究室の学生の成果については、<a href="./index.html">トップページ</a>のNewsや<a href="publications.html">業績</a>のページをご覧ください。<br><br>
       大学で研究したテーマにをそのまま職にする学生さんはあまり多くはありませんが、学生時代に研究活動を通じて身に着けた、物事の本質を見抜く力、論理的に思考する力は一生の財産となります。小手先のテクニックだけではなく、物事を深く考える力を身につけて、社会で活躍できる人材へと成長してほしいと願っています。
     </section>
     
