--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 	    ■ 2023/03/23:<br>
 	    利光君（B4）がSD卒業研究優秀発表賞を受賞しました。この賞は、システムデザイン工学科の卒論発表会における審査員の投票により優秀であると認められた数名に贈られるものです。おめでとうございます。<br>
 	    Toshimitsu-kun (B4) won the "SD Graduation Research Excellent Presentation Award", which is given to a few students recognised as outstanding by the judges at the graduation thesis presentation session of our department. Congratulations!<br><br>
-	    <img src="images/20241003toshimitsu.jpg" width="400" height="auto">
+	    <img src="images/20241003toshimitsu.JPG" width="400" height="auto">
 	    <br>
 	    <br>
 	    ■ 2023/02/28:<br>
