--- a/recruitment.html
+++ b/recruitment.html
@@ -54,7 +54,7 @@
       <br><br>
       <h3 class="heading">研究紹介</h3>
       <br>
-      計算力学は（古典的な力学に限らず）様々な物理を対象としますが、特に音や光などの「波」や熱の制御するデバイスの創成と現象の解析に興味を持って研究を進めています。ここでは、最もわかりやすい例として音響レンズ（音を一点に集める構造）の最適設計を紹介します。数に示すように「手前」から入ってきた音波を「奥」にある観測点に集めるためには、どのような形のものを設計領域 \( D \) の中に配置したら良いでしょうか？
+      計算力学は（古典的な力学に限らず）様々な物理を対象としますが、特に音や光などの「波」や熱の制御するデバイスの創成と現象の解析に興味を持って研究を進めています。ここでは、最もわかりやすい例として音響レンズ（音を一点に集める構造）の最適設計を紹介します。下図に示すように「手前」から入ってきた音波を「奥」にある観測点に集めるためには、どのような形のものを設計領域 \( D \) の中に配置したら良いでしょうか？
       <div style="text-align: center;">
 	<img src="images/acoustic_lens.png" width="500" height="auto">
       </div>
